Создано с помощью Colaboratory

--- a/NDRF_B+.ipynb
+++ b/NDRF_B+.ipynb
@@ -8,7 +8,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "304923a8-bc4e-4528-bded-d1e6336e0e8b"
+        "outputId": "a1c7f190-d0b5-47cd-834e-7a3633785276"
       },
       "outputs": [
         {
@@ -17,7 +17,7 @@
           "text": [
             "Collecting tabula-py\n",
             "  Downloading tabula_py-2.9.0-py3-none-any.whl (12.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.0/12.0 MB\u001b[0m \u001b[31m17.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.0/12.0 MB\u001b[0m \u001b[31m39.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: pandas>=0.25.3 in /usr/local/lib/python3.10/dist-packages (from tabula-py) (1.5.3)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from tabula-py) (1.25.2)\n",
             "Requirement already satisfied: distro in /usr/lib/python3/dist-packages (from tabula-py) (1.7.0)\n",
@@ -47,7 +47,7 @@
       ],
       "metadata": {
         "id": "PvkoNgW3WPxZ",
-        "outputId": "38ad7f90-22e6-4d42-cecc-ad98623695cc",
+        "outputId": "17b7d7a1-3cce-46cc-83e4-7c1086d80682",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -74,26 +74,26 @@
       ],
       "metadata": {
         "id": "xhyqFmvRWMai",
-        "outputId": "7111aee7-a063-4fab-dab3-6ed88a746524",
+        "outputId": "bbb499d5-97ac-414d-e7bf-7b452dfea4e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         }
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'Mozilla/5.0 (Linux; Android 11; moto e20 Build/RONS31.267-94-14) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.6261.64 Mobile Safari/537.36'"
+              "'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -130,7 +130,7 @@
         },
         "outputId": "98d11765-4d85-4858-bfc4-0512567c400b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +169,7 @@
       "metadata": {
         "id": "o05z4XQscbAX"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -2545,7 +2545,7 @@
       "metadata": {
         "id": "-NeM1rN3qfk2"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -2645,7 +2645,7 @@
       "metadata": {
         "id": "F5Tosi7uvfsu"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2756,7 +2756,7 @@
         "            num_d=num_d+float(str_d)\n",
         "            ffindd=1\n",
         "         if ffindd==0:\n",
-        "          print('222')\n",
+        "         # print('222')\n",
         "          str_d=str(str(tables[k][i+2][j]).replace('\\r', '').replace('19.7.1.1.1.1','').replace('19.7.1.1.1.2','').replace('19.7.1.1.1.3','').replace('-',''))\n",
         "          str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
         "          str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
@@ -2770,12 +2770,13 @@
         "          str_d=str_d.replace('Количестводоговоров.заключенныхприусловииуплатыобя', '')\n",
         "          str_d=str_d.replace('кроу:', '')\n",
         "          str_d=str_d.replace('19.7.1.1.2Нежилыепомещения:', '')\n",
+        "          print('222   '+str(str_d))\n",
         "          if len(str_d)>0:\n",
         "           if math.isnan(float(str_d))==False:\n",
         "            num_d=num_d+float(str_d)\n",
         "            ffindd=1\n",
         "         if ffindd==0:\n",
-        "          print('333')\n",
+        "        #  print('333')\n",
         "          str_d=str(str(tables[k][i+1][j+1]).replace('\\r', '').replace('19.7.1.1.1.1','').replace('19.7.1.1.1.2','').replace('19.7.1.1.1.3','').replace('-',''))\n",
         "          str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
         "          str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
@@ -2789,6 +2790,7 @@
         "          str_d=str_d.replace('Количестводоговоров.заключенныхприусловииуплатыобя', '')\n",
         "          str_d=str_d.replace('кроу:', '')\n",
         "          str_d=str_d.replace('19.7.1.1.2Нежилыепомещения:', '')\n",
+        "          print('333   '+str(str_d))\n",
         "          if len(str_d)>0:\n",
         "           if math.isnan(float(str_d))==False:\n",
         "            num_d=num_d+float(str_d)\n",
@@ -2808,6 +2810,7 @@
         "          str_d=str_d.replace('Количестводоговоров.заключенныхприусловииуплатыобя', '')\n",
         "          str_d=str_d.replace('кроу:', '')\n",
         "          str_d=str_d.replace('19.7.1.1.2Нежилыепомещения:', '')\n",
+        "          print('0+2   '+str(str_d))\n",
         "          if len(str_d)>0:\n",
         "           if math.isnan(float(str_d))==False:\n",
         "            num_d=num_d+float(str_d)\n",
@@ -2828,13 +2831,13 @@
         "          str_d=str_d.replace('Количестводоговоров.заключенныхприусловииуплатыобя', '')\n",
         "          str_d=str_d.replace('кроу:', '')\n",
         "          str_d=str_d.replace('19.7.1.1.2Нежилыепомещения:', '')\n",
-        "          print('try')\n",
+        "          print('try   '+str(str_d))\n",
         "          if len(str_d)>0:\n",
         "           if math.isnan(float(str_d))==False:\n",
         "            num_d=num_d+float(str_d)\n",
         "            ffindd=1\n",
-        "         except (KeyError, ValueError):\n",
-        "          try:\n",
+        "          if ffindd==0:\n",
+        "        #  print('333')\n",
         "           str_d=str(str(tables[k][i+1][j+1]).replace('\\r', '').replace('19.7.1.1.1.1','').replace('19.7.1.1.1.2','').replace('19.7.1.1.1.3','').replace('-',''))\n",
         "           str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
         "           str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
@@ -2848,11 +2851,55 @@
         "           str_d=str_d.replace('Количестводоговоров.заключенныхприусловииуплатыобя', '')\n",
         "           str_d=str_d.replace('кроу:', '')\n",
         "           str_d=str_d.replace('19.7.1.1.2Нежилыепомещения:', '')\n",
+        "           print('try 1+1   '+str(str_d))\n",
+        "           if len(str_d)>0:\n",
+        "            if math.isnan(float(str_d))==False:\n",
+        "             num_d=num_d+float(str_d)\n",
+        "             ffindd=1\n",
+        "          if ffindd==0:\n",
+        "    #      print('333')\n",
+        "           str_d=str(str(tables[k][i][j+2]).replace('\\r', '').replace('19.7.1.1.1.1','').replace('19.7.1.1.1.2','').replace('19.7.1.1.1.3','').replace('-',''))\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных при условии уплаты обязательных отчислений(взносов) в компенсационный фонд:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных при условии уплаты обязательных отчислений (взносов) в компенсационный фонд:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных с использованием иных способов обеспечения гражданской ответственности застройщика:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных с использованием иных способов обеспечениягражданской ответственности застройщика:', '')\n",
+        "           str_d=str_d.replace('(','').replace(')','').replace(' ','').replace(',','.').replace('Жилыепомещения:','')\n",
+        "           str_d=str_d.replace('Количестводоговоров.заключенныхсиспользованиемсчетовэс', '')\n",
+        "           str_d=str_d.replace('Количестводоговоров.заключенныхсиспользованиеминыхспо', '')\n",
+        "           str_d=str_d.replace('Количестводоговоров.заключенныхприусловииуплатыобя', '')\n",
+        "           str_d=str_d.replace('кроу:', '')\n",
+        "           str_d=str_d.replace('19.7.1.1.2Нежилыепомещения:', '')\n",
+        "           print('try 0+2   '+str(str_d))\n",
+        "           if len(str_d)>0:\n",
+        "            if math.isnan(float(str_d))==False:\n",
+        "             num_d=num_d+float(str_d)\n",
+        "             ffindd=1\n",
+        "         except (KeyError, ValueError):\n",
+        "          print('error1')\n",
+        "          try:\n",
+        "          # print('try 1+1')\n",
+        "           str_d=str(str(tables[k][i+1][j+1]).replace('\\r', '').replace('19.7.1.1.1.1','').replace('19.7.1.1.1.2','').replace('19.7.1.1.1.3','').replace('-',''))\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных при условии уплаты обязательных отчислений(взносов) в компенсационный фонд:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных при условии уплаты обязательных отчислений (взносов) в компенсационный фонд:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных с использованием иных способов обеспечения гражданской ответственности застройщика:', '')\n",
+        "           str_d=str_d.replace('Количество договоров, заключенных с использованием иных способов обеспечениягражданской ответственности застройщика:', '')\n",
+        "           str_d=str_d.replace('(','').replace(')','').replace(' ','').replace(',','.').replace('Жилыепомещения:','')\n",
+        "           str_d=str_d.replace('Количестводоговоров.заключенныхсиспользованиемсчетовэс', '')\n",
+        "           str_d=str_d.replace('Количестводоговоров.заключенныхсиспользованиеминыхспо', '')\n",
+        "           str_d=str_d.replace('Количестводоговоров.заключенныхприусловииуплатыобя', '')\n",
+        "           str_d=str_d.replace('кроу:', '')\n",
+        "           str_d=str_d.replace('19.7.1.1.2Нежилыепомещения:', '')\n",
+        "           print('try 1+1   '+str(str_d))\n",
         "           if len(str_d)>0:\n",
         "            if math.isnan(float(str_d))==False:\n",
         "             num_d=num_d+float(str_d)\n",
         "             ffindd=1\n",
         "          except (KeyError, ValueError):\n",
+        "           print('error2')\n",
         "           str_d=str(str(tables[k][i][j+2]).replace('\\r', '').replace('19.7.1.1.1.1','').replace('19.7.1.1.1.2','').replace('19.7.1.1.1.3','').replace('-',''))\n",
         "           str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
         "           str_d=str_d.replace('Количество договоров, заключенных с использованием счетов эскроу:', '')\n",
@@ -3081,102 +3128,144 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qKyli93A_lpI",
-        "outputId": "c7d18380-cc64-43a5-c820-0c009c83f674"
+        "outputId": "bb84c61e-4754-42d4-bfaa-7618e799e0ce"
       },
-      "execution_count": 49,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "2=57m|m1|25|19.7.1.1.1\n",
-            "222\n",
             "444\n",
+            "error1\n",
+            "try 1+1   \n",
             "2=57m|m1|27|19.7.1.1.1.1 кроу:\n",
-            "222\n",
             "444\n",
+            "error1\n",
+            "try 1+1   0\n",
             "2=57m|m1|30|19.7.1.1.1.2 затель ных от числе ний (взно сов) в компенса ционный фонд:\n",
-            "222\n",
             "444\n",
+            "error1\n",
+            "try 1+1   32\n",
             "2=57m|m1|33|19.7.1.1.1.3 собов обеспеч ения гражданской ответс твенности застрой щи ка:\n",
-            "222\n",
             "444\n",
+            "error1\n",
+            "try 1+1   36\n",
             "58m|m0|7|19.7.2.1.1.1 левом стро ительстве зак люч ен с исполь зо ванием сче тов эс кроу:\n",
             "58m|m0|11|19.7.2.1.1.2\n",
             "58m|m0|16|19.7.2.1.1.3\n",
             "2=80m|m1|25|19.7.1.1.1\n",
-            "222\n",
             "444\n",
+            "error1\n",
+            "try 1+1   \n",
             "2=80m|m1|27|19.7.1.1.1.1 кроу:\n",
-            "222\n",
             "444\n",
+            "error1\n",
+            "try 1+1   0\n",
             "2=80m|m1|30|19.7.1.1.1.2 затель ных отчисле ний (взно сов) в компенса ци онный фонд:\n",
-            "222\n",
             "444\n",
+            "error1\n",
+            "try 1+1   0\n",
             "2=80m|m1|33|19.7.1.1.1.3 собов обеспеч ения граждан ской ответствен ности застрой щика:\n",
-            "222\n",
             "444\n",
+            "error1\n",
+            "try 1+1   0\n",
             "81m|m0|7|19.7.2.1.1.1 левом стро ительстве зак люч ен с ис пользованием сче тов эскроу:\n",
             "81m|m0|11|19.7.2.1.1.2\n",
             "81m|m0|16|19.7.2.1.1.3\n",
             "2=103m|m1|50|19.7.1.1.1\n",
             "444\n",
-            "try\n",
+            "try   ещения:\n",
+            "error1\n",
+            "try 1+1   \n",
             "2=103m|m1|52|19.7.1.1.1.1 кроу:\n",
-            "222\n",
-            "333\n",
+            "222   nan\n",
+            "333   0\n",
             "2=104m|m0|1|19.7.1.1.1.2 затель ных отчисле ний (взно сов) в ком пенсационный фонд:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "2=104m|m0|4|19.7.1.1.1.3 собов обес печ ения граж данской от ветственности застройщи ка:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "104m|m0|30|19.7.2.1.1.1 левом стро итель стве зак люч ен с ис поль зованием счетов эскроу:\n",
             "104m|m0|34|19.7.2.1.1.2\n",
             "104m|m0|39|19.7.2.1.1.3\n",
             "2=132m|m0|18|19.7.1.1.1 Жи лые пом еще ния:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "2=132m|m0|20|19.7.1.1.1.1 кроу:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "2=132m|m0|23|19.7.1.1.1.2 затель ных от числе ний (взно сов) в ком пенсацион ный фонд:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "2=132m|m0|26|19.7.1.1.1.3 собов обес печ ения граж дан ской от ветс твен ности застройщи ка:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "133m|m0|1|19.7.2.1.1.1 левом строитель стве зак люч ен с исполь зованием счетов эс кроу:\n",
             "133m|m0|5|19.7.2.1.1.2\n",
             "133m|m0|10|19.7.2.1.1.3\n",
             "2=161m|m0|0|19.7.1.1.1 Жилые пом еще ния:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "2=161m|m0|2|19.7.1.1.1.1 кроу:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "2=161m|m0|5|19.7.1.1.1.2 зательных отчисле ний (взно сов) в компенсаци онный фонд:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "2=161m|m0|8|19.7.1.1.1.3 собов обеспеч ения граж дан ской ответс твенности зас трой щика:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "161m|m0|34|19.7.2.1.1.1 левом стро ительстве зак люч ен с использовани ем счетов эс кроу:\n",
             "161m|m0|38|19.7.2.1.1.2\n",
             "161m|m0|43|19.7.2.1.1.3\n",
             "2=186m|m1|50|19.7.1.1.1\n",
             "444\n",
-            "try\n",
+            "try   ещения:\n",
+            "error1\n",
+            "try 1+1   \n",
             "2=186m|m1|52|19.7.1.1.1.1 кроу:\n",
-            "222\n",
-            "333\n",
+            "222   nan\n",
+            "333   0\n",
             "2=187m|m0|1|19.7.1.1.1.2 зательных от числе ний (взно сов) в компенса ци онный фонд:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "2=187m|m0|4|19.7.1.1.1.3 собов обес печ ения граж дан ской от ветственности зас тройщика:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "187m|m0|30|19.7.2.1.1.1 левом стро итель стве заключ ен с использованием сче тов эс кроу:\n",
             "187m|m0|34|19.7.2.1.1.2\n",
             "187m|m0|39|19.7.2.1.1.3\n",
             "2=212m|m1|50|19.7.1.1.1\n",
             "444\n",
-            "try\n",
+            "try   ещения:\n",
+            "error1\n",
+            "try 1+1   \n",
             "2=212m|m1|52|19.7.1.1.1.1 кроу:\n",
-            "222\n",
-            "333\n",
+            "222   nan\n",
+            "333   0\n",
             "2=213m|m0|1|19.7.1.1.1.2 зательных от числе ний (взно сов) в компенса ци онный фонд:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "2=213m|m0|4|19.7.1.1.1.3 собов обес печ ения граж дан ской от ветственности зас тройщика:\n",
             "444\n",
+            "error1\n",
+            "error2\n",
             "213m|m0|30|19.7.2.1.1.1 левом стро итель стве заключ ен с использованием сче тов эс кроу:\n",
             "213m|m0|34|19.7.2.1.1.2\n",
             "213m|m0|39|19.7.2.1.1.3\n",
@@ -3188,30 +3277,30 @@
     {
       "cell_type": "code",
       "source": [
-        "str(tables[212][2][53])"
+        "str(tables[187][0][2])"
       ],
       "metadata": {
         "id": "bNzlNHorkiTi",
-        "outputId": "550d43c8-d803-4885-bf05-4bd2a0676a84",
+        "outputId": "3bcb39dd-6733-47d3-9b7c-99e1b6778777",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         }
       },
-      "execution_count": 48,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'0'"
+              "'61'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 38
         }
       ]
     },
